commit d60bb9c0b52c8e0452bfbe507e60d5f651589cc8
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-16 18:57:16 +0200

    Update static documentation

commit 14fa47b1ea1651fc2cb7bbf0086741a8004d35ee
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-16 18:54:34 +0200

    Remove external data also from git as their licence is unclear

commit 608c4f89a2656f67ba915aab17633d41acc789a7
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-16 18:44:22 +0200

    Add build and test logs to the git repo

commit 3e26a8ab76a434c3465ea1db1b4a2a2ff3ea8ec8
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-16 18:40:25 +0200

    Add TWA concentrations for days > 1, fix link
    
    Now we have seven test calculations for the Step 1 calculator, all
    perfectly passing. This provides confidence that this is a
    correct reimplementation of the Step 1 part of the Step 1/2 calculator.

commit 36036b5901223591e7e21e8b73d8cd1fb034f4cb
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-16 15:43:50 +0200

    Finish the Step 1 calculator including tests
    
    Some cleaning up. PELMO facilities do not currently work at my end,
    as I have no working wine installation on this computer

commit d042f8f06b313e8595087587455daac73d84f17b
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-05-15 20:01:28 +0200

    Start of an Steps 1/2 calculator in R

commit b052bf8d1e090e07bf0853f0aa8b895db8f41a2a
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-29 19:24:37 +0200

    Make it possible to use expressions in axis labels

commit d69fda8d8f854b735394ecdaec9d59fb18c42b00
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-28 10:09:45 +0200

    Update Changelog

commit 90e5ff0a9fdadd65e179c04c7d43b4db6e301984
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-03-06 17:59:16 +0100

    Move static docs to pkdown.jrwb.de, update them

commit 68e36eb0a5f1b611588d47f77e0ef7c3d9ba0beb