@@ -1,0 +1,1 @@
+inst/testdata/*.psm text eol=crlf
