@@ -150,30 +150,60 @@ the period.plm file generated by the FOCUS PELMO GUI.</p>
     
 
     <h2 class="hasAnchor" id="examples"><a class="anchor" href="#examples"></a>Examples</h2>
-    <pre class="examples"><div class='input'><span class='co'># At the moment I can not run the examples, as my wine installation is not working</span>
-<span class='fu'>not_run</span>({
-  <span class='co'># Reproduce the official test results for annual application of Pesticide D</span>
-  <span class='co'># to winter cereals at the day before emergence</span>
-  <span class='no'>runs_1</span> <span class='kw'>&lt;-</span> <span class='fu'>list</span>(
-    <span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D'</span>,
-         <span class='kw'>win</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Jok"</span>, <span class='st'>"Kre"</span>, <span class='st'>"Oke"</span>, <span class='st'>"Pia"</span>, <span class='st'>"Por"</span>, <span class='st'>"Sev"</span>, <span class='st'>"Thi"</span>)),
-    <span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D_1_day_pre_em_every_third_year'</span>,
-         <span class='kw'>pot</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Jok"</span>, <span class='st'>"Kre"</span>, <span class='st'>"Oke"</span>, <span class='st'>"Pia"</span>, <span class='st'>"Por"</span>, <span class='st'>"Sev"</span>, <span class='st'>"Thi"</span>)))
-  <span class='no'>time_1</span> <span class='kw'>&lt;-</span> <span class='fu'>system.time</span>(
-    <span class='no'>PECgw_1</span> <span class='kw'>&lt;-</span> <span class='fu'>PELMO_runs</span>(<span class='no'>runs_1</span>, <span class='kw'>psm_dir</span> <span class='kw'>=</span> <span class='fu'>system.file</span>(<span class='st'>"testdata"</span>, <span class='kw'>package</span> <span class='kw'>=</span> <span class='st'>"pfm"</span>),
-      <span class='kw'>cores</span> <span class='kw'>=</span> <span class='fl'>6</span>, <span class='kw'>overwrite</span> <span class='kw'>=</span> <span class='fl'>TRUE</span>)
-  )
-  <span class='fu'>print</span>(<span class='no'>PECgw_1</span>)
-  <span class='co'># We get exactly the same PECgw values (on Linux, calling PELMO using Wine).</span>
-  <span class='fu'>print</span>(<span class='no'>time_1</span>)
-
-  <span class='co'># Demonstrate some results with metabolites.</span>
-  <span class='no'>runs_2</span> <span class='kw'>&lt;-</span> <span class='fu'>list</span>(<span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D_1_May_every_other_year_mets'</span>,
-                      <span class='kw'>win</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Kre"</span>)))
-  <span class='no'>PECgw_2</span> <span class='kw'>&lt;-</span> <span class='fu'>PELMO_runs</span>(<span class='no'>runs_2</span>, <span class='kw'>psm_dir</span> <span class='kw'>=</span> <span class='fu'>system.file</span>(<span class='st'>"testdata"</span>, <span class='kw'>package</span> <span class='kw'>=</span> <span class='st'>"pfm"</span>),
-    <span class='kw'>cores</span> <span class='kw'>=</span> <span class='fl'>3</span>, <span class='kw'>overwrite</span> <span class='kw'>=</span> <span class='fl'>TRUE</span>)
-  <span class='fu'>print</span>(<span class='no'>PECgw_2</span>)
-})</div></pre>
+    <pre class="examples"><div class='input'><span class='co'># Reproduce the official test results for annual application of Pesticide D</span>
+<span class='co'># to winter cereals at the day before emergence</span>
+<span class='no'>runs_1</span> <span class='kw'>&lt;-</span> <span class='fu'>list</span>(
+  <span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D'</span>,
+       <span class='kw'>win</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Jok"</span>, <span class='st'>"Kre"</span>, <span class='st'>"Oke"</span>, <span class='st'>"Pia"</span>, <span class='st'>"Por"</span>, <span class='st'>"Sev"</span>, <span class='st'>"Thi"</span>)),
+  <span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D_1_day_pre_em_every_third_year'</span>,
+       <span class='kw'>pot</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Jok"</span>, <span class='st'>"Kre"</span>, <span class='st'>"Oke"</span>, <span class='st'>"Pia"</span>, <span class='st'>"Por"</span>, <span class='st'>"Sev"</span>, <span class='st'>"Thi"</span>)))
+<span class='no'>time_1</span> <span class='kw'>&lt;-</span> <span class='fu'>system.time</span>(
+  <span class='no'>PECgw_1</span> <span class='kw'>&lt;-</span> <span class='fu'>PELMO_runs</span>(<span class='no'>runs_1</span>, <span class='kw'>psm_dir</span> <span class='kw'>=</span> <span class='fu'>system.file</span>(<span class='st'>"testdata"</span>, <span class='kw'>package</span> <span class='kw'>=</span> <span class='st'>"pfm"</span>),
+    <span class='kw'>cores</span> <span class='kw'>=</span> <span class='fl'>6</span>, <span class='kw'>overwrite</span> <span class='kw'>=</span> <span class='fl'>TRUE</span>)
+)
+<span class='fu'>print</span>(<span class='no'>PECgw_1</span>)</div><div class='output co'>#&gt; $Pesticide_D
+#&gt; $Pesticide_D$win
+#&gt;     FOCUS DUMMY D
+#&gt; Cha         0.025
+#&gt; Ham         1.621
+#&gt; Jok         0.388
+#&gt; Kre         0.467
+#&gt; Oke         1.608
+#&gt; Pia         0.848
+#&gt; Por         2.386
+#&gt; Sev         0.009
+#&gt; Thi         0.030
+#&gt; 
+#&gt; 
+#&gt; $Pesticide_D_1_day_pre_em_every_third_year
+#&gt; $Pesticide_D_1_day_pre_em_every_third_year$pot
+#&gt;     FOCUS DUMMY D
+#&gt; Cha         0.010
+#&gt; Ham         0.014
+#&gt; Jok         0.009
+#&gt; Kre         0.027
+#&gt; Oke         0.085
+#&gt; Pia         0.051
+#&gt; Por         0.021
+#&gt; Sev         0.000
+#&gt; Thi         0.001
+#&gt; 
+#&gt; </div><div class='input'><span class='co'># We get exactly the same PECgw values (on Linux, calling PELMO using Wine).</span>
+<span class='fu'>print</span>(<span class='no'>time_1</span>)</div><div class='output co'>#&gt;        User      System verstrichen 
+#&gt;     219.860       0.960      55.449 </div><div class='input'>
+<span class='co'># Demonstrate some results with metabolites.</span>
+<span class='no'>runs_2</span> <span class='kw'>&lt;-</span> <span class='fu'>list</span>(<span class='fu'>list</span>(<span class='kw'>psm</span> <span class='kw'>=</span> <span class='st'>'Pesticide_D_1_May_every_other_year_mets'</span>,
+                    <span class='kw'>win</span> <span class='kw'>=</span> <span class='fu'>c</span>(<span class='st'>"Cha"</span>, <span class='st'>"Ham"</span>, <span class='st'>"Kre"</span>)))
+<span class='no'>PECgw_2</span> <span class='kw'>&lt;-</span> <span class='fu'>PELMO_runs</span>(<span class='no'>runs_2</span>, <span class='kw'>psm_dir</span> <span class='kw'>=</span> <span class='fu'>system.file</span>(<span class='st'>"testdata"</span>, <span class='kw'>package</span> <span class='kw'>=</span> <span class='st'>"pfm"</span>),
+  <span class='kw'>cores</span> <span class='kw'>=</span> <span class='fl'>3</span>, <span class='kw'>overwrite</span> <span class='kw'>=</span> <span class='fl'>TRUE</span>)
+<span class='fu'>print</span>(<span class='no'>PECgw_2</span>)</div><div class='output co'>#&gt; $Pesticide_D_1_May_every_other_year_mets
+#&gt; $Pesticide_D_1_May_every_other_year_mets$win
+#&gt;     FOCUS DUMMY D      M1    M2
+#&gt; Cha         0.001 126.195 0.000
+#&gt; Ham         0.054  82.196 0.001
+#&gt; Kre         0.103  75.494 0.001
+#&gt; 
+#&gt; </div></pre>
   </div>
   <div class="col-md-3 hidden-xs hidden-sm" id="sidebar">
     <h2>Contents</h2>
