@@ -55,8 +55,6 @@ run directory, holding the results for all FOCUS periods, equivalent to
 the period.plm file generated by the FOCUS PELMO GUI.
 }
 \examples{
-# At the moment I can not run the examples, as my wine installation is not working
-\dontrun{
 # Reproduce the official test results for annual application of Pesticide D
 # to winter cereals at the day before emergence
 runs_1 <- list(
@@ -78,7 +76,6 @@ runs_2 <- list(list(psm = 'Pesticide_D_1_May_every_other_year_mets',
 PECgw_2 <- PELMO_runs(runs_2, psm_dir = system.file("testdata", package = "pfm"),
   cores = 3, overwrite = TRUE)
 print(PECgw_2)
-}
 }
 \references{
 PELMO.installeR \url{https://pkgdown.jrwb.de/PELMO.installeR}
