@@ -19,8 +19,13 @@ runs <- list(
     psm = "Pesticide_D_1_May_every_other_year_mets",
     win = names(FOCUS_GW_scenarios_2012$names)))
 
+# Check if we have wine on the path
+wine_installed <- system('wine --version', ignore.stdout = TRUE) == 0
+
 test_that("PELMO paths are correctly created", {
-  skip("A wine installation is needed for this test")
+  if (!wine_installed) {
+    skip("A wine installation is needed for this test")
+  }
   psm_paths = c(
      PELMO_path(runs[[1]]$psm, "fbe", "Por"),
      PELMO_path(runs[[2]]$psm, "pot", "Ham"),
@@ -35,7 +40,9 @@ test_that("PELMO paths are correctly created", {
 })
 
 test_that("PELMO runs are correctly set up", {
-  skip("A wine installation is needed for this test")
+  if (!wine_installed) {
+    skip("A wine installation is needed for this test")
+  }
 
   # Prepare runs in analogy to the test archive
   PELMO_runs(runs, psm_dir = PELMO_base, execute = FALSE, evaluate = FALSE, overwrite = TRUE)
@@ -59,7 +66,10 @@ test_that("PELMO runs are correctly set up", {
 })
 
 test_that("PELMO runs can be run and give the expected result files", {
-  skip("A wine installation is needed for this test")
+  if (!wine_installed) {
+    skip("A wine installation is needed for this test")
+  }
+
   run_PELMO(runs, cores = 7)
 
   plm_files <- c("CHEM.PLM", "ECHO.PLM",
@@ -88,10 +98,12 @@ test_that("PELMO runs can be run and give the expected result files", {
   }
 })
 
-# pfm_PECgw <- evaluate_PELMO(runs)
+pfm_PECgw <- evaluate_PELMO(runs)
 
 test_that("PELMO runs are correctly evaluated", {
-  skip("A wine installation is needed for this test")
+  if (!wine_installed) {
+    skip("A wine installation is needed for this test")
+  }
 
   # Check that if output is the same as in the test archive
   for (run in runs) {
@@ -149,7 +161,9 @@ test_that("PELMO runs are correctly evaluated", {
 })
 
 test_that("PECgw from FOCUS summary files can be reproduced", {
-  skip("A wine installation is needed for this test")
+  if (!wine_installed) {
+    skip("A wine installation is needed for this test")
+  }
   focus_summary <- list()
 
   for (run in runs) {
